[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = 'dkimg'
version = '0.1.0'
authors = [{ name='dk0d' }]
description = 'dk0d python image processing helpers'
long_description = 'README.md'
long_description_content_type = 'text/markdown'
requires-python = '>=3.7'
classifiers = [
  'Development Status :: 3 - Alpha',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Build Tools',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python :: 3.9'
]
package_dir = 'src'
dependencies = [ 
  'tqdm',
  'seaborn',
  'cloudpickle',
  'jsonpickle',
  'matplotlib',
  'numpy',
  'opencv-python',
  'scikit-image',
  'scikit-learn',
  'scipy',
  'typing_extensions',
  'pandas',
  'imutils'
]